--- a/css/scss/_style.scss
+++ b/css/scss/_style.scss
@@ -8,6 +8,8 @@ $gray: #7b7b7b;
 
 $gray_oth: #878787;
 
+$gray_ad: #adadad;
+
 $red: #e54b21;
 
 $tirq: #00b5af;
@@ -15,6 +17,8 @@ $tirq: #00b5af;
 $ohra: #fff4e4;
 
 $white: #ffffff;
+
+$beige: #fff3e2;
 
 html{
 	font-size: 16px;
@@ -27,8 +31,9 @@ body{
 	font-size: $fontSize + px;
 }
 
-img{
+img, svg{
 	max-width: 100%;
+	display: block;
 }
 
 #preLogo{
@@ -121,15 +126,18 @@ img{
 	transition: .3s ease-out;
 }
 
-.category-row{
-	transform: scale(1);
-	transition: .2s ease-out;
+.categories-row{
+	transition: .5s ease-out;
 }
 
-.cart-box{
+.categories-row.scaled{
+	transform: scale(0.95);
+	opacity: 0.6;
+}
+
+.cart-row{
 	position: relative;
-	background: $tirq;
-	z-index: 10;
+	z-index: 110;
 	transition: all .5s ease-out;
 }
 
@@ -144,9 +152,14 @@ img{
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background: rgba(0,0,0,0.5);
+	background: rgba(255,255,255,0.75);
 	top: 0;
 	left: 0;
-	z-index: 5;
+	z-index: 105;
 	display: none;
+}
+
+footer{
+	position: relative;
+	z-index: 110;
 }
